--- a/cemba_data/files/m3c_skypilot_template.yaml
+++ b/cemba_data/files/m3c_skypilot_template.yaml
@@ -21,6 +21,7 @@ setup: |
 
 run: |
   conda activate yap
+  pip install git+https://github.com/DingWB/cemba_data
   # prefix="mapping_example/mapping/test/AMB_220510_8wk_12D_13B_2_P3-6-A11"
   snakemake --snakefile ~/sky_workdir/Snakefile -j 8 --default-resources mem_mb=100 \
           --resources mem_mb=50000 --config gcp=True --default-remote-prefix bucket_name/{outdir}/pool_name/{uid} \
